whitespace fix

--- a/less/defaults.less
+++ b/less/defaults.less
@@ -145,6 +145,8 @@
 @columns:                   12;
 @responsive:                true;
 
+// Whitespace fix
+@whitespace:                -.32em;
 
 // --------------------------------------------
 // Media Queries Breakpoints
