--- a/less/mixins/grid.less
+++ b/less/mixins/grid.less
@@ -100,7 +100,7 @@
   margin: 0 0 0 -(@g);
   // margin: 0 -(@g);
   padding: 0;
-  letter-spacing: -0.31em;
+  letter-spacing: @whitespace;
   > * { .grid-items(); }
 }
 
