--- a/less/mixins/preboot.less
+++ b/less/mixins/preboot.less
@@ -316,7 +316,7 @@
 
 // Fix whitespace
 .whitespace() {
-    letter-spacing: -0.31em;
+    letter-spacing: @whitespace;
     // word-spacing: -0.43em;
     // white-space: nowrap;
     > * {
