--- a/less/modules/debug.less
+++ b/less/modules/debug.less
@@ -169,14 +169,14 @@
     // --------------------------------------------
     
     body:before {
-        position:fixed;
-        top:0;
-        right:0;
-        padding:15px;
-        background:#00e9cf;
-        color:#000;
+        position: fixed;
+        top: 0;
+        right: 0;
+        padding: 15px;
+        background: #00e9cf;
+        color: #000;
         text-shadow: 0 1px 0 rgba(255,255,255,0.9);
-        z-index: 9999;
+        z-index: 9999999;
     }
     
     .xxs() { body:before { content:"xxs"; } }
@@ -214,7 +214,7 @@
      * Vertical rhythm baseline grid
      */
     body {
-        position:relative;
+        position: relative;
     }
     
     body:after {
@@ -230,7 +230,7 @@
         right: 0;
         top: 0;
         width: auto;
-        z-index: 9999;
+        z-index: 999999;
         opacity: 0.2;
         // opacity: 0;
     }
